--- a/first-part/KreditoKortos/KreditoKortos/KreditoKortos.csproj
+++ b/first-part/KreditoKortos/KreditoKortos/KreditoKortos.csproj
@@ -43,6 +43,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Account.cs" />
+    <Compile Include="CreditCard.cs" />
+    <Compile Include="Currency.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
