--- a/first-part/KreditoKortos/KreditoKortos/KreditoKortos.csproj
+++ b/first-part/KreditoKortos/KreditoKortos/KreditoKortos.csproj
@@ -46,8 +46,11 @@
     <Compile Include="Account.cs" />
     <Compile Include="CreditCard.cs" />
     <Compile Include="Currency.cs" />
+    <Compile Include="MasterCard.cs" />
+    <Compile Include="PremiumCard.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RegularCard.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
