--- a/first-part/KreditoKortos/KreditoKortos/CreditCardTemplate.csproj
+++ b/first-part/KreditoKortos/KreditoKortos/CreditCardTemplate.csproj
@@ -55,6 +55,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RegularCardWithDeposit.cs" />
     <Compile Include="RegularCardDepositless.cs" />
+    <Compile Include="RegularPayment.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
