--- a/first-part/KreditoKortos/DelegavimoSchemosKortos/DelegavimoSchemosKortos.csproj
+++ b/first-part/KreditoKortos/DelegavimoSchemosKortos/DelegavimoSchemosKortos.csproj
@@ -43,11 +43,34 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CreditCard.cs" />
+    <Compile Include="ILoanManagementTool.cs" />
+    <Compile Include="IOrderingTool.cs" />
+    <Compile Include="IPaymentTool.cs" />
+    <Compile Include="LoanDepositlessTool.cs" />
+    <Compile Include="LoanWithDepositTool.cs" />
+    <Compile Include="MasterCard.cs" />
+    <Compile Include="MasterOrderingTool.cs" />
+    <Compile Include="MasterPaymentTool.cs" />
+    <Compile Include="Order.cs" />
+    <Compile Include="OrderingTool.cs" />
+    <Compile Include="PremiumCard.cs" />
+    <Compile Include="PremiumOrderingTool.cs" />
+    <Compile Include="PremiumPaymentTool.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RegularCard.cs" />
+    <Compile Include="RegularOrderingTool.cs" />
+    <Compile Include="RegularPaymentTool.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\KreditoKortos\CreditCardTemplate.csproj">
+      <Project>{7f1524f6-273d-4567-a801-b1fe0c59dd5e}</Project>
+      <Name>CreditCardTemplate</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
