--- a/second-part/RPGEffectSystem/RPGEffectSystem/RPGEffectSystem.csproj
+++ b/second-part/RPGEffectSystem/RPGEffectSystem/RPGEffectSystem.csproj
@@ -43,6 +43,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="IFightableObject.cs" />
+    <Compile Include="Fightable.cs" />
+    <Compile Include="NPC.cs" />
+    <Compile Include="Player.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
