Visitor demonstration in progress
Visitor doesn't differentiate IEffect from IOtEffect. Effects are stored in a <IEffect> list.

--- a/second-part/RPGEffectSystem/RPGVisitor/RPGVisitor.csproj
+++ b/second-part/RPGEffectSystem/RPGVisitor/RPGVisitor.csproj
@@ -52,6 +52,8 @@
     <Compile Include="IEffectVisitor.cs" />
     <Compile Include="IFightableObject.cs" />
     <Compile Include="IOtEffect.cs" />
+    <Compile Include="NPC.cs" />
+    <Compile Include="Player.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RegularEffectVisitor.cs" />
