--- a/second-part/RPGEffectSystem/RPGVisitor/RPGVisitor.csproj
+++ b/second-part/RPGEffectSystem/RPGVisitor/RPGVisitor.csproj
@@ -58,6 +58,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RegularEffectVisitor.cs" />
     <Compile Include="StacksEffect.cs" />
+    <Compile Include="StatusEffect.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
